	However, this could change depending and we should be prepared.

   !	pdq_query_reply: fixed when pdqGet is given a specific NS server
	to query, pdqPoll failed to validate that the reply came from
	the specific NS, unless the server appeared in /etc/resolv.conf,
	which defeats the purpose of being able to query arbitrary
	servers. Reported by Sergiu Dunca.


--1.73.6--

   !	Log.c: remove references to pthread_mutex_lock / unlock in
	favour of flockfile and funlockfile where available, otherwise
	no explicit locking. This removes the need for -lpthread for
	single process non-threaded applications that just need simple
	logging, such as tools/popin.c

   !	smdbAccessCode: removed toupper() conversion of Sendmail/Postfix
   	action words; assume (based on Sendmail and Postfix access map
   	documentation) action words are upper case only.

   	This addresses a milter-ahead Postfix bug with respect to call-
	ahead-db, where the mailer token of a RHS value might start with
	"relay:" and so smdbAccessDomain lookup returns SMDB_ACCESS_RELAY
	instead of SMDB_ACCESS_UNKNOWN. Reported by Alex Broens.

   !	Updated all makefiles to handle a libsnert install target that
   	installs some of the more useful test/CLI tools.


--1.73.5--

   +	Add smtp2Auth() and SMTP_AUTH_* support.

--1.73.4--

  !!	version.h.in.in, kvm_*_db: fixed mutex locking logic problem
	introduce sometime around 1.72.7 when the pthread_cleanup_push /
	pop wrappers were added to resolve possible mutex deadlock due
	to a pthread_cancel.

   !	sys/gmtime_r: Added pthread_cleanup_push / pop wrappers to
	release a locked mutex after a cancellation point.

   !	kvm_close_db: fixed potential memory leak when closing a KVM
   	opened on a Berkeley DB.

   !	parsePath: Added STRICT_MIN_DOTS flag to control the min.dots
   	test via STRICT_SYNTAX. Requested by Alex Broens.


--1.73.3--

   !    Upgraded SQLite to 3.6.22

   !	convertDate.c: invert order of UT / UTC comparision in tzList